WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
221331
Test landed flaky: [iOS] TestWebKitAPI.WebKit2.CrashGPUProcessWhileCapturing
https://bugs.webkit.org/show_bug.cgi?id=221331
Summary
Test landed flaky: [iOS] TestWebKitAPI.WebKit2.CrashGPUProcessWhileCapturing
Aakash Jain
Reported
2021-02-03 07:22:40 PST
TestWebKitAPI.WebKit2.CrashGPUProcessWhileCapturing seems flaky on iOS. In
https://ews-build.webkit.org/#/builders/9/builds/39710
, the test Failed in run-api-tests step. However, in the immediately next retry step (re-run-api-tests), it passed. Same thing in
https://ews-build.webkit.org/#/builders/9/builds/39698
and
https://ews-build.webkit.org/#/builders/9/builds/39699
History:
https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.WebKit2.CrashGPUProcessWhileCapturing
Attachments
Patch
(3.32 KB, patch)
2021-02-04 03:20 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(5.34 KB, patch)
2021-02-12 02:05 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Aakash Jain
Comment 1
2021-02-03 07:24:21 PST
Seems like it has been flaky since it was added 5 days back in
https://trac.webkit.org/r272050
Aakash Jain
Comment 2
2021-02-03 07:27:30 PST
From
https://ews-build.webkit.org/#/builders/9/builds/39710/steps/10/logs/stdio
: TestWebKitAPI.WebKit2.CrashGPUProcessWhileCapturing (webrtc_video_engine.cc:3316): Absent receive stream; ignoring clearing encoded frame sink for ssrc 0 /Volumes/Data/worker/iOS-14-Simulator-Build-EWS/build/Tools/TestWebKitAPI/Tests/WebKit/GetUserMedia.mm:74 Expected equality of these values: @"PASS" Which is: "PASS" [message body] Which is: "FAIL checkVideoStatus"
Radar WebKit Bug Importer
Comment 3
2021-02-03 09:16:32 PST
<
rdar://problem/73935129
>
youenn fablet
Comment 4
2021-02-04 03:20:21 PST
Created
attachment 419264
[details]
Patch
EWS
Comment 5
2021-02-04 13:32:19 PST
Committed
r272381
: <
https://trac.webkit.org/changeset/272381
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 419264
[details]
.
youenn fablet
Comment 6
2021-02-05 01:06:20 PST
Reopening since flakiness continues in the bots.
Ryan Haddad
Comment 7
2021-02-10 20:37:13 PST
Do we think this is a test only issue, or should we revert the original change?
youenn fablet
Comment 8
2021-02-11 01:30:09 PST
(In reply to Ryan Haddad from
comment #7
)
> Do we think this is a test only issue, or should we revert the original > change?
This test identifies an issue in the way we handle GPU process capture on iOS. I am working on fixing this. Once done, the test should no longer be flaky. I hope to fix this by end of this week, early next week. I am fine skipping this test on iOS for now. The original change is fine.
youenn fablet
Comment 9
2021-02-11 04:26:04 PST
(In reply to youenn fablet from
comment #8
)
> (In reply to Ryan Haddad from
comment #7
) > > Do we think this is a test only issue, or should we revert the original > > change? > > This test identifies an issue in the way we handle GPU process capture on > iOS. > I am working on fixing this. Once done, the test should no longer be flaky.
Fix in
https://bugs.webkit.org/show_bug.cgi?id=221747
youenn fablet
Comment 10
2021-02-12 02:05:57 PST
Created
attachment 420105
[details]
Patch
EWS
Comment 11
2021-02-12 13:10:13 PST
Committed
r272802
: <
https://commits.webkit.org/r272802
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 420105
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug