Source/WebKit/WebProcess/cocoa/UserMediaCaptureManager.h
@@ -90,9 +90,6 @@ private:
     private:
         WebCore::CaptureSourceOrError createVideoCaptureSource(const WebCore::CaptureDevice&, String&& hashSalt, const WebCore::MediaConstraints*) final;
         WebCore::CaptureDeviceManager& videoCaptureDeviceManager() final { return m_manager.m_noOpCaptureDeviceManager; }
-#if PLATFORM(IOS_FAMILY)
-        void setActiveSource(WebCore::RealtimeMediaSource&) final;
-#endif
 
         UserMediaCaptureManager& m_manager;
         bool m_shouldCaptureInGPUProcess { false };
